# pydantic-collections

./: README.md  pyproject.toml
.trunk/: trunk.yaml
pydantic_collections/: __init__.py  api.py  core.py  external_utils.py  mapping.py  sequence.py
tests/: test_mapping.py  test_pyproject_toml.py  test_sequence.py
